; ModuleID = '/home/carl/AnghaBench/linux/crypto/extr_af_alg.c_alg_do_release.c'
source_filename = "/home/carl/AnghaBench/linux/crypto/extr_af_alg.c_alg_do_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.af_alg_type = type { i32, i32 (i8*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.af_alg_type*, i8*)* @alg_do_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @alg_do_release(%struct.af_alg_type* %0, i8* %1) #0 {
  %3 = alloca %struct.af_alg_type*, align 8
  %4 = alloca i8*, align 8
  store %struct.af_alg_type* %0, %struct.af_alg_type** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.af_alg_type*, %struct.af_alg_type** %3, align 8
  %6 = icmp ne %struct.af_alg_type* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  br label %18

8:                                                ; preds = %2
  %9 = load %struct.af_alg_type*, %struct.af_alg_type** %3, align 8
  %10 = getelementptr inbounds %struct.af_alg_type, %struct.af_alg_type* %9, i32 0, i32 1
  %11 = load i32 (i8*)*, i32 (i8*)** %10, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 %11(i8* %12)
  %14 = load %struct.af_alg_type*, %struct.af_alg_type** %3, align 8
  %15 = getelementptr inbounds %struct.af_alg_type, %struct.af_alg_type* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = call i32 @module_put(i32 %16)
  br label %18

18:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @module_put(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
